# aoc-2020

./: .gitignore  README.md  pyproject.toml
src/aoc/day1/first/: solution.py
src/aoc/day1/second/: solution.py
src/aoc/day10/first/: solution.py  test_solution.py
src/aoc/day10/second/: solution.py  test_solution.py
src/aoc/day11/first/: solution.py  test_solution.py
src/aoc/day11/second/: solution.py  test_solution.py
src/aoc/day12/first/: solution.py  test_solution.py
src/aoc/day12/second/: solution.py  test_solution.py
src/aoc/day13/first/: solution.py  test_solution.py
src/aoc/day13/second/: solution.py  test_solution.py
src/aoc/day14/first/: solution.py  test_solution.py
src/aoc/day14/second/: solution.py  test_solution.py
src/aoc/day15/first/: solution.py  test_solution.py
src/aoc/day15/second/: solution.py
src/aoc/day16/first/: solution.py  test_solution.py
src/aoc/day16/second/: solution.py  test_solution.py
src/aoc/day17/first/: solution.py  test_solution.py
src/aoc/day17/second/: solution.py  test_solution.py
src/aoc/day18/first/: solution.py  test_solution.py
src/aoc/day18/second/: solution.py  test_solution.py
src/aoc/day19/first/: solution.py  test_solution.py
src/aoc/day19/second/: solution.py  test_solution.py
src/aoc/day2/first/: solution.py  test_solution.py
src/aoc/day2/second/: solution.py  test_solution.py
src/aoc/day20/first/: solution.py  test_solution.py
src/aoc/day20/second/: arrangement.py  monsters.py  solution.py  test_arrangement.py  test_monsters.py  test_tiles.py  (+1 more)
src/aoc/utils/: __init__.py
(+46 files in other folders)
