[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Nacho Mas <mesai@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-subtests = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = ">=4.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
