[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Nacho Mas <ignaciomasmesa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-subtests = ">=0.3.2"
attrs = "^20.3"

[tool.poetry.dev-dependencies]
pytest = ">=4.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
